# cluster-dispatch

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: JOB_RECORD_SCHEMA.md  RELEASE_CHECKLIST.md
src/cluster_dispatch/: __init__.py  cli.py  config.py  schedulers.py  transport.py
src/project_control/: __init__.py  cli.py  config.py  schedulers.py
tests/: test_cli_flows.py
